# fluvio-client-cpp

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  fluvio_client_cppConfig.cmake
.github/workflows/: ci.yml  ci_e2e.yml  release.yml
docs/: API.md
examples/: CMakeLists.txt  README.md  consumer.cpp  producer.cpp  vcpkg.json
include/: fluvio.h
src/: admin.rs  c_api.rs  client.rs  config.rs  consumer.rs  lib.rs  produce_output.rs  producer.rs
tests/: test_admin.cpp  test_auth.cpp  test_auth_c.c  test_c.c  test_config.cpp  test_consumer.cpp  test_producer.cpp
vcpkg-port/: portfile.cmake  vcpkg.json
